--- a/css/style.css
+++ b/css/style.css
@@ -236,6 +236,11 @@ body {
 
   color: #2b2b2b;
 }
+
+.select-box {
+  display: flex;
+  flex-direction: column;
+}
 .select-form__subtitle {
   padding-bottom: 4px;
   font-weight: 400;
@@ -252,6 +257,8 @@ body {
   max-height: 0;
   opacity: 0;
   border-bottom: 1px solid rgba(72, 121, 150, 0.5);
+
+  order: 1;
 }
 
 .select-box .options-container.active {
@@ -262,6 +269,31 @@ body {
 .option,
 .selected {
   cursor: pointer;
+}
+
+.selected {
+  position: relative;
+  order: 0;
+}
+
+.selected::after {
+  content: "";
+  background-image: url(../images/Polygon.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  position: absolute;
+  display: block;
+  width: 13px;
+  height: 19px;
+  right: 0;
+  bottom: 0;
+
+  transition: all 0.4s;
+}
+
+.select-box .options-container.active + .selected::after {
+  transform: rotate(180deg);
+  top: 0;
 }
 .option:hover {
   background-color: rgba(72, 121, 150, 0.5);
